chore(backend)[PW-38]: Manual checks and remove unneeded endpoints
